RESOLVED FIXED107562
REGRESSION(r140344): Repeated crashes in WKTR PlatformWebView::viewSupportsOptions().
https://bugs.webkit.org/show_bug.cgi?id=107562
Summary REGRESSION(r140344): Repeated crashes in WKTR PlatformWebView::viewSupportsOp...
Jer Noble
Reported 2013-01-22 10:41:59 PST
REGRESSION(r140344): Repeated crashes in WKTR PlatformWebView::viewSupportsOptions().
Attachments
Patch (2.67 KB, patch)
2013-01-22 10:43 PST, Jer Noble
ap: review+
Jer Noble
Comment 1 2013-01-22 10:43:54 PST
Alexey Proskuryakov
Comment 2 2013-01-22 10:46:12 PST
Comment on attachment 184011 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=184011&action=review r=me > Tools/WebKitTestRunner/mac/PlatformWebViewMac.mm:113 > + bool useTiledDrawing = useTiledDrawingValue ? WKBooleanGetValue(static_cast<WKBooleanRef>(useTiledDrawingValue)) : false; This might read better as: bool useTiledDrawing = useTiledDrawingValue && WKBooleanGetValue(static_cast<WKBooleanRef>(useTiledDrawingValue)); What do you think?
Jer Noble
Comment 3 2013-01-22 10:54:30 PST
Nice suggestion actually. :)
Jer Noble
Comment 4 2013-01-22 11:15:36 PST
Note You need to log in before you can comment on or make changes to this bug.