REGRESSION(r140344): Repeated crashes in WKTR PlatformWebView::viewSupportsOptions(). https://bugs.webkit.org/show_bug.cgi?id=107562

Rubber-stamped by Alexy Proskuryakov.

The input to WKBooleanGetValue() is not NULL-safe, so NULL check its inputs before calling.

* WebKitTestRunner/mac/PlatformWebViewMac.mm:
(WTR::PlatformWebView::PlatformWebView):
(WTR::PlatformWebView::viewSupportsOptions):

Canonical link: https://commits.webkit.org/125790@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140442 268f45cc-cd09-0410-ab3c-d52691b4dbfc